# agentic-review

./: README.md
.github/workflows/: ai-review-backup.yml  ai-review.yml
examples/: .agentic-review.yml  caller-workflow-minimal.yml  caller-workflow.yml
examples/monorepo-demo/: .agentic-review.yml  .gitignore  README.md  package.json
examples/monorepo-demo/.github/workflows/: ai-review.yml
examples/monorepo-demo/apps/web/: package.json
examples/monorepo-demo/apps/web/src/: index.ts
examples/monorepo-demo/apps/web/test/: smoke.test.js
examples/monorepo-demo/infra/: README.md  main.tf  variables.tf
examples/monorepo-demo/services/api/: Makefile  pyproject.toml
examples/monorepo-demo/services/api/app/: __init__.py  main.py
prompts/: detect-and-command.md  pr-review.md  review-results.md  security-scan.md
scripts/: ai-fix-setup.sh  ai-pass1.sh  ai-pass2.sh  call-llm.sh  common.sh  configure-npm-registry.sh  discover-iac.sh  extra-scans.sh  format-check-coverage.sh  gather-context.sh  load-config.sh  post-review.js  run-checks.sh  run-dep-audit.sh  run-docker.sh  run-security.sh  run-sonar.sh  validate-payload.sh
scripts/prompts/: pass1-system.txt  pass1-user-template.md  pass2-system.txt  repair-system.txt
